crates/plotnik-tests/tests/05-typegen/definitions/error_captured_ref_to_captureless_def.txt
A = (identifier)
Q = (program (expression_statement (A) @x))
------------------ DIAGNOSTICS -------------------
error: the referenced definition produces no value; add a capture inside it or capture a node pattern directly
 --> query.ptk:2:36
  |
1 | A = (identifier)
  |     ------------ defined here
2 | Q = (program (expression_statement (A) @x))
  |                                    ^^^
